--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -113,9 +113,9 @@ address = {street = "University Road", city = "Southampton", region = "Hampshire
 #   Set to `[]` to disable, or comment out unwanted lines with a hash `#`.
 contact_links = [
   #{icon = "twitter", icon_pack = "fab", name = "DM Me", link = "https://twitter.com/Twitter"},
-  {icon = "github", icon_pack = "fab", name = "Code", link = "https://github.com/temuller/"},
-  {icon = "linkedin", icon_pack = "fab", name = "LinkedIn", link = "https://linkedin.com/in/tomás-müller-bravo-57a8731a9"},
-  {icon = "orcid", icon_pack = "fab", name = "OrcID", link = "https://orcid.org/0000-0003-3939-7167"},
+  #{icon = "github", icon_pack = "fab", name = "Code", link = "https://github.com/temuller/"},
+  #{icon = "linkedin", icon_pack = "fab", name = "LinkedIn", link = "https://linkedin.com/in/tomás-müller-bravo-57a8731a9"},
+  #{icon = "orcid", icon_pack = "fab", name = "OrcID", link = "https://orcid.org/0000-0003-3939-7167"},
   #{icon = "skype", icon_pack = "fab", name = "Skype Me", link = "skype:echo123?call"},
   #{icon = "keybase", icon_pack = "fab", name = "Chat on Keybase", link = "https://keybase.io/"},
   #{icon = "comments", icon_pack = "fas", name = "Discuss on Forum", link = "https://discourse.gohugo.io"},
