--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -8,29 +8,49 @@
   url = "#about"
   weight = 10
 
-#[[main]]
-#  name = "Posts"
-#  url = "#posts"
-#  weight = 20
+[[main]]
+  name = "Skills"
+  url = "#skills"
+  weight = 20
+
+[[main]]
+  name = "Publications"
+  url = "#publications"
+  weight = 30
+
+[[main]]
+  name = "Awards"
+  url = "#accomplishments"
+  weight = 40
+
+[[main]]
+  name = "Posts"
+  url = "#posts"
+  weight = 50
 
 [[main]]
   name = "Projects"
   url = "#projects"
-  weight = 30
-
-[[main]]
-  name = "Publications"
-  url = "#featured"
-  weight = 40
-
-[[main]]
-  name = "Contact"
-  url = "#contact"
   weight = 60
+
+[[main]]
+  name = "Talks"
+  url = "#talks"
+  weight = 70
+
+[[main]]
+  name = "Workshops"
+  url = "#meetings"
+  weight = 80
 
 # Link to a PDF of your resume/CV from the menu.
 # To enable, copy your resume/CV to `static/files/cv.pdf` and uncomment the lines below.
 # [[main]]
 #    name = "CV"
 #    url = "files/cv.pdf"
-#    weight = 70
+#    weight = 180
+
+[[main]]
+  name = "Contact"
+  url = "#contact"
+  weight = 200
