--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -10,7 +10,8 @@ title = "Tomás E. Müller Bravo"
 
 # The URL of your site.
 # End your URL with a `/` trailing slash, e.g. `https://example.com/`.
-baseurl = "https://tomas-muller-bravo.netlify.app"
+#baseurl = "https://tomas-muller-bravo.netlify.app"
+baseurl = "https://tomasmullerbravo.co.uk"
 
 # Enter a copyright notice to display in the site footer.
 # To display a copyright symbol, type `&copy;`. For current year, type `{year}`.
