--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -11,7 +11,8 @@ title = "Tomás E. Müller Bravo"
 # The URL of your site.
 # End your URL with a `/` trailing slash, e.g. `https://example.com/`.
 #baseurl = "https://tomas-muller-bravo.netlify.app"
-baseurl = "https://tomasmullerbravo.co.uk/"
+#baseurl = "https://tomasmullerbravo.co.uk/"
+baseurl = "https://temuller.github.io/
 
 # Enter a copyright notice to display in the site footer.
 # To display a copyright symbol, type `&copy;`. For current year, type `{year}`.
