--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -94,7 +94,7 @@ email = "t.e.muller-bravo@ice.csic.es"
 
 # Address
 # For country_code, use the 2-letter ISO code (see https://en.wikipedia.org/wiki/ISO_3166-1_alpha-2 )
-address = {street = "Carrer de Can Magrans", city = "Barcelona", region = "", postcode = "08193", country = "Spain", country_code = "ES"}
+address = {street = "The Campanile of Trinity College", city = "Dublin", region = "", postcode = "Dublin 2", country = "Ireland", country_code = ""}
 
 # Geographic coordinates
 # To get your coordinates, right-click on Google Maps and choose "What's here?". The coords will show up at the bottom.
